# meme-pilot

./: .claudeignore  .env.example  .gitignore  CLAUDE.md  CONTEXT.md  LICENSE  README-containers.md  README.md  docker-compose.build.override.yml.example  docker-compose.build.yml  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
bot/: Dockerfile  app_state.py  auth.py  bot.py  config.py  log_context.py  logging_config.py  reply.py  session.py
bot/engine/: __init__.py  ai_matcher.py  baidu_ocr.py  collection_manager.py  combined_searcher.py  deepseek_ocr.py  embedding_service.py  google_embedding.py  image_optimizer.py  index_manager.py  index_types.py  keyword_searcher.py  metadata_store.py  ocr_service.py  openai_embedding.py  openai_ocr.py  paddle_ocr.py  protocols.py  provider_factory.py  random_searcher.py  rapidocr_ocr.py  rerank_service.py  retry_config.py  semantic_searcher.py  types.py  utils.py  vector_store.py
bot/index_manager/: __init__.py  entry_writer.py  image_pipeline.py  index_types.py  manager.py  rwlock.py  sync_engine.py  write_coordinator.py
bot/plugins/: _collection_utils.py  _help_text.py  _search_utils.py  add.py  addtag.py  ai.py  cancel.py  collection.py  delete.py  edit.py  (+25 more)
deploy/: deploy.ps1  deploy.sh
docs/: API.md  PRD.md  process.md
napcat/: entrypoint.sh
scripts/: convert_memes_to_webp.py  import_speaker_to_db.py  migrate_json_to_db.py  migrate_meme_collections.py  png_to_jpg.py  regenerate_embeddings.py  test_baidu_ocr.py
tests/: conftest.py
typings/: pylcs.pyi
(+272 files in other folders)
