[project]
name = "meme-pilot"
version = "0.1.0"
description = "QQ 私聊表情包机器人"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot2[fastapi]>=2.5.0",
    "openai>=2.43.0",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pylcs>=0.1.1",
    "python-dotenv>=1.2.2",
    "ujson>=5.13.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
