[project]
name = "meme-pilot"
version = "0.1.0"
description = "QQ 私聊表情包机器人"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "google-genai>=2.10.0",
    "httpx>=0.28.1",
    "jieba>=0.42.1",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot2[fastapi]>=2.5.0",
    "onnxruntime>=1.27.0",
    "openai>=2.43.0",
    "paddleocr>=3.7.0",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pylcs>=0.1.1",
    "python-dotenv>=1.2.2",
    "rapidocr>=3.9.1",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-anyio>=0.0.0",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
